# inf-canvas-agent

./: .env.example  .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml  start.bat
backend/src/inf_canvas/: __init__.py  config.py  main.py
backend/src/inf_canvas/ai/: __init__.py
backend/src/inf_canvas/ai/agents/: __init__.py  canvas_commander.py  layout.py  orchestrator.py  pid_extractor.py  tools.py
backend/src/inf_canvas/ai/agents/canvas_commander/: __init__.py  graph.py  prompts.py  schemas.py  states.py
backend/src/inf_canvas/ai/agents/orchestrator/: __init__.py  graph.py  prompts.py  schemas.py  states.py
backend/src/inf_canvas/ai/agents/pid_extractor/: __init__.py  graph.py  prompts.py  schemas.py  states.py
backend/src/inf_canvas/ai/agents/shared/: __init__.py  annotate.py  catalog.py  layout.py  lines.py  tiling.py  tools.py
backend/src/inf_canvas/ai/models/: __init__.py  base.py  gemini.py  langchain_client.py  prompts.py  schemas.py
backend/src/inf_canvas/api/: deps.py  routes_agents.py  routes_canvas.py  streaming.py  ws.py
backend/src/inf_canvas/canvas/: __init__.py  command_bus.py  reducer.py  store.py  validation.py
backend/src/inf_canvas/schema/: __init__.py  canvas.py  commands.py  equipment.py
backend/tests/: test_command_bus.py  test_layout.py  test_lines.py  test_reducer.py  test_store.py  test_tiling.py  test_tools.py  test_validation.py
frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.vue
frontend/src/__tests__/: reducer.test.ts  validation.test.ts
frontend/src/api/: client.ts
frontend/src/canvas/: CanvasView.vue  ContextMenu.vue  SpotlightSearch.vue  layout.ts  reports.ts  validation.ts
frontend/src/canvas/edges/: PipeEdge.vue  lineStyles.ts
frontend/src/canvas/nodes/: EquipmentNode.vue  GroupNode.vue
frontend/src/canvas/nodes/symbols/: CompressorSymbol.vue  HeatExchangerSymbol.vue  InstrumentSymbol.vue  PumpSymbol.vue  TankSymbol.vue  ValveSymbol.vue  VesselSymbol.vue  symbolRegistry.ts
frontend/src/composables/: useCanvasIo.ts  useSpeech.ts  useTheme.ts
frontend/src/panels/: AgentPanel.vue  CommandPalette.vue  FloatingPanel.vue  InspectorPanel.vue  IssuesPanel.vue  LeftPanel.vue  LegendPanel.vue  NodeLibrary.vue  ProjectPanel.vue  Toolbar.vue  TopBar.vue
frontend/src/realtime/: ws.ts
frontend/src/schema/: canvas.ts  commands.ts  equipment.ts  index.ts  reducer.ts
frontend/src/stores/: canvasStore.ts  uiStore.ts
frontend/src/styles/: main.css
