[project]
name = "inf-canvas"
version = "0.1.0"
description = "Backend for the infinite canvas agent app (P&ID extraction + AI canvas control)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "google-genai>=0.8",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "pillow>=11.0",
    "opencv-python-headless>=4.10",
    "numpy>=2.1",
]

[project.optional-dependencies]
# Non-Gemini providers, served through LangChain's init_chat_model.
# Install with: uv sync --extra providers
providers = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inf_canvas"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]
# B008: FastAPI uses Depends()/File()/Form() in argument defaults by design.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["google.*", "langgraph.*", "langchain.*", "langchain_core.*", "cv2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
